--- a/templates/aggregator/parse.html
+++ b/templates/aggregator/parse.html
@@ -3,12 +3,24 @@
 {% block content %}
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1 class="lead text-align-center">{{ items.0 }}</h1>
-            <hr>
-            {% for foo in source.entries %}
-                <h2 class="lead text-align-center"><a href="{{ foo.link }}">{{ foo.title }}</a></h2>
-                <p class="lead">{{ foo.description }}</p>
-            {% endfor %}
+            {% if request.user.is_authenticated %}
+                <h1 class="lead text-align-center">{{ items.0 }}</h1>
+                <hr>
+                {% for foo in source.entries %}
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <div class="panel-title text-align-center">
+                                <a href="{{ foo.link }}">{{ foo.title }}</a>
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                            <p class="lead">{{ foo.description }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% else %}
+                {% include 'permission.html' %}
+            {% endif %}
         </div>
     </div>
 {% endblock %}
