--- a/templates/filters/home.html
+++ b/templates/filters/home.html
@@ -14,6 +14,9 @@
             {{ message }}
             </div>
             {% endfor %}
+            {% for foo in response %}
+                <h1 class="lead">{{ forloop.counter }}. <a href="{% url 'filters:parsed' foo.id %}">{{ foo.value.0 }}</a></h1>
+            {% endfor %}
             </div>
         </div>
 {% endblock %}
