Added link onto filter's home app

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -38,6 +38,8 @@
                             <li><a href="{% url 'filters:add' %}"><span class="fa fa-plus-circle"></span> Add a
                                 filter</a></li>
                             <li><a href="{% url 'filters:conf' %}"><span class="fa fa-edit"></span> Edit filters</a>
+                        <li><a href="{% url 'filters:home' %}"><span class="fa fa-feed"></span> Show
+                                filters</a></li>
                             </li>
                         </ul>
                     </li>
