--- a/templates/filters/parser.html
+++ b/templates/filters/parser.html
@@ -17,6 +17,8 @@
                         </div>
                     </div>
                 {% endfor %}
+            {% elif request.user.is_authenticated %}
+                <p class="lead">It's empty now. Please, <a href="{% url 'filters:add' %}">add new one</a>.</p>
             {% else %}
                 {% include 'permission.html' %}
             {% endif %}
