--- a/templates/filters/home.html
+++ b/templates/filters/home.html
@@ -4,19 +4,24 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             {% for message in messages %}
-                {% if messages.success %}
-                    <div class="alert alert-success alert-dismissible" role="alert">
-                {% else %}
-                    <div class="alert alert-success alert-dismissible" role="alert">
-                {% endif %}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                    aria-hidden="true">&times;</span></button>
-            {{ message }}
-            </div>
+                <div class="alert alert-info alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    {{ message }}
+                </div>
             {% endfor %}
-            {% for foo in response %}
-                <h1 class="lead">{{ forloop.counter }}. <a href="{% url 'filters:parsed' foo.id %}">{{ foo.value.0 }}</a></h1>
-            {% endfor %}
-            </div>
+            {% if response %}
+                {% for foo in response %}
+                    <h1 class="lead">{{ forloop.counter }}. <a
+                            href="{% url 'filters:parsed' foo.id %}">{{ foo.value.0 }}</a></h1>
+                {% endfor %}
+            {% elif request.user.is_authenticated %}
+                <p class="lead">There is no filters. You can <a href="{% url 'filters:add' %}">add</a> a
+                    new
+                    one.</p>
+            {% else %}
+                {% include 'permission.html' %}
+            {% endif %}
         </div>
+    </div>
 {% endblock %}
