--- a/templates/aggregator/edit.html
+++ b/templates/aggregator/edit.html
@@ -67,11 +67,9 @@
                         </button>
                     </div>
                 </form>
-            {% elif request.user.is_authenticated %}
+            {% elif not response %}
                 <p class="lead">There is no documents. You can <a href="{% url 'aggregator:add' %}">add</a> a new
                     document.</p>
-            {% else %}
-                {% include 'permission.html' %}
             {% endif %}
         </div>
     </div>
