--- a/templates/aggregator/home.html
+++ b/templates/aggregator/home.html
@@ -17,14 +17,9 @@
                     <h1 class="lead">{{ forloop.counter }}. <a href="{% url 'aggregator:parse' foo.id %}">{{ foo.value.0 }}</a></h1>
                 {% endfor %}
                 </table>
-            {% elif request.user.is_authenticated %}
+            {% elif not response %}
                 <p class="lead">There is no documents. You can <a href="{% url 'aggregator:add' %}">add</a> a new
                     document.</p>
-            {% else %}
-                <div class="alert alert-danger"><b>Permission denied!</b> You must be authorized. Please, <a
-                        href="{% url 'account_login' %}">log in</a> or <a href="{% url 'account_signup' %}">sign
-                    up</a>.
-                </div>
             {% endif %}
         </div>
     </div>
