--- a/templates/aggregator/home_source.html
+++ b/templates/aggregator/home_source.html
@@ -14,11 +14,11 @@
             {% endif %}
             {% if response %}
                 {% for foo in response %}
-                    <h1 class="lead">{{ forloop.counter }}. <a href="{% url 'aggregator:parse' foo.id %}">{{ foo.value.0 }}</a></h1>
+                    <h1 class="lead">{{ forloop.counter }}. <a href="{% url 'parse_source' foo.id %}">{{ foo.value.0 }}</a></h1>
                 {% endfor %}
                 </table>
             {% elif not response %}
-                <p class="lead">There is no documents. You can <a href="{% url 'aggregator:add' %}">add</a> a new
+                <p class="lead">There is no documents. You can <a href="{% url 'add_source' %}">add</a> a new
                     document.</p>
             {% endif %}
         </div>
