--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -4,10 +4,10 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             {% for instance in query %}
-                <h1>{{ forloop.counter }}. <a href="{% url 'blog:details' instance.id %}">{{ instance.title }}</a></h1>
+                <h1>{{ forloop.counter }}. <a href="{% url 'details_blog' instance.id %}">{{ instance.title }}</a></h1>
             {% empty %}
                 {% if request.user.is_authenticated %}
-                    <p class="lead">Go ahead and <a href="{% url 'blog:add_post' %}">add</a> new post.</p>
+                    <p class="lead">Go ahead and <a href="{% url 'add_post_blog' %}">add</a> new post.</p>
                 {% else %}
                     <p class="lead">It's empty. <a href="{% url 'account_login' %}">Sign in</a> to add new post.</p>
                 {% endif %}
