--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,10 +11,10 @@
                     <li><a href="http://127.0.0.1:5984/_utils">CouchDB</a></li>
                 {% endif %}
                 {% if not '/blog/' in request.get_full_path %}
-                    <li><a href="{% url 'blog:home' %}">Blog</a></li>
+                    <li><a href="{% url 'home_blog' %}">Blog</a></li>
                 {% else %}
                     {% if request.user.is_authenticated and not '/blog/add/' in request.get_full_path %}
-                        <li><a href="{% url 'blog:add_post' %}">Add post</a></li>
+                        <li><a href="{% url 'add_post_blog' %}">Add post</a></li>
                     {% else %}
                     {% endif %}
                 {% endif %}
@@ -23,11 +23,11 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Aggregator <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'aggregator:add' %}"><span class="fa fa-plus-circle"></span> Add a
+                            <li><a href="{% url 'add_source' %}"><span class="fa fa-plus-circle"></span> Add a
                                 source</a></li>
-                            <li><a href="{% url 'aggregator:edit' %}"><span class="fa fa-edit"></span> Edit sources</a>
+                            <li><a href="{% url 'edit_source' %}"><span class="fa fa-edit"></span> Edit sources</a>
                             </li>
-                            <li><a href="{% url 'aggregator:home' %}"><span class="fa fa-list-ol"></span> Show
+                            <li><a href="{% url 'home_source' %}"><span class="fa fa-list-ol"></span> Show
                                 sources</a></li>
                         </ul>
                     </li>
@@ -35,10 +35,10 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Filters <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'filters:add' %}"><span class="fa fa-plus-circle"></span> Add a
+                            <li><a href="{% url 'add_filter' %}"><span class="fa fa-plus-circle"></span> Add a
                                 filter</a></li>
-                            <li><a href="{% url 'filters:conf' %}"><span class="fa fa-edit"></span> Edit filters</a>
-                        <li><a href="{% url 'filters:home' %}"><span class="fa fa-feed"></span> Show
+                            <li><a href="{% url 'conf_filter' %}"><span class="fa fa-edit"></span> Edit filters</a>
+                        <li><a href="{% url 'home_filter' %}"><span class="fa fa-feed"></span> Show
                                 filters</a></li>
                             </li>
                         </ul>
