--- a/templates/aggregator/filters_config.html
+++ b/templates/aggregator/filters_config.html
@@ -34,12 +34,12 @@
                                        data-content="Select elements what you want and press a button for deletion.">Actions</a>
                                 </th>
                                 </thead>
-                                {% for foo in response %}
+                                {% for item in response %}
                                     <tbody>
                                     <th>{{ forloop.counter }}</th>
-                                    <th><a href="{% url 'update_filter' foo.id %}">{{ foo.value.0 }}</a></th>
+                                    <th><a href="{% url 'update_filter' item.id %}">{{ item.value.0 }}</a></th>
                                     <th class="text-align-center"><input type="checkbox" name="item"
-                                                                         value="{{ foo.id }}"></th>
+                                                                         value="{{ item.id }}"></th>
                                     </tbody>
                                 {% endfor %}
                             </table>
