--- a/templates/aggregator/parse_source.html
+++ b/templates/aggregator/parse_source.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1 class="lead text-align-center">{{ items.0 }}</h1>
+            <h1 class="lead text-align-center">{{ items.title }}</h1>
             <hr>
             {% for item in source.entries %}
                 <div class="panel panel-info">
