--- a/templates/aggregator/home_source.html
+++ b/templates/aggregator/home_source.html
@@ -14,7 +14,7 @@
             {% endif %}
             {% if response %}
                 {% for item in response %}
-                    <h1 class="lead">{{ forloop.counter }}. <a href="{% url 'parse_source' item.id %}">{{ item.value.0 }}</a></h1>
+                    <h1 class="lead">{{ forloop.counter }}. <a href="{% url 'parse_source' item.id %}">{{ item.value.title }}</a></h1>
                 {% endfor %}
                 </table>
             {% elif not response %}
