Refactoring of templates

--- a/templates/aggregator/filters_config.html
+++ b/templates/aggregator/filters_config.html
@@ -57,7 +57,7 @@
     </div>
 {% endblock %}
 {% block js %}
-    <script src="{% static 'js/init-bw.js' %}"></script>
+    <script src="{% static 'js/init-bs.js' %}"></script>
     <script src="{% static 'js/bootstrap-switch.js' %}"></script>
     <script src="{% static 'js/popover.js' %}"></script>
 {% endblock %}
