--- a/templates/aggregator/edit_source.html
+++ b/templates/aggregator/edit_source.html
@@ -77,5 +77,5 @@
 {% block js %}
     <script src="{% static 'js/popover.js' %}"></script>
     <script src="{% static 'js/bootstrap-switch.js' %}"></script>
-    <script src="{% static 'js/init-bw.js' %}"></script>
+    <script src="{% static 'js/init-bs.js' %}"></script>
 {% endblock %}
