--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,6 +2,13 @@
 <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="{% url 'home' %}">Aggregator</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -38,7 +45,7 @@
                             <li><a href="{% url 'add_filter' %}"><span class="fa fa-plus-circle"></span> Add a
                                 filter</a></li>
                             <li><a href="{% url 'conf_filter' %}"><span class="fa fa-edit"></span> Edit filters</a>
-                        <li><a href="{% url 'home_filter' %}"><span class="fa fa-feed"></span> Show
+                            <li><a href="{% url 'home_filter' %}"><span class="fa fa-feed"></span> Show
                                 filters</a></li>
                             </li>
                         </ul>
