--- a/templates/aggregator/parser_filter.html
+++ b/templates/aggregator/parser_filter.html
@@ -3,17 +3,17 @@
 {% block content %}
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1 class="lead text-align-center">{{ title }}</h1>
+            <h1 class="lead text-align-center">{{ response.0.value.name }}</h1>
             {% if response %}
                 {% for item in response %}
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <div class="panel-title">
-                                <a href="{{ item.link }}">{{ item.title }}</a>
+                            <div class="panel-title text-align-center">
+                                <a href="{{ item.link }}">{{ item.value.title }}</a>
                             </div>
                         </div>
                         <div class="panel-body">
-                            {{ item.description }}
+                            {{ item.value.desc }}
                         </div>
                     </div>
                 {% endfor %}
