Added new views and changed fields of form

--- a/templates/aggregator/parser_filter.html
+++ b/templates/aggregator/parser_filter.html
@@ -9,7 +9,7 @@
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <div class="panel-title text-align-center">
-                                <a href="{{ item.link }}">{{ item.value.title }}</a>
+                                <a href="{{ item.value.link }}">{{ item.value.title }}</a>
                             </div>
                         </div>
                         <div class="panel-body">
