--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -59,6 +59,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>{{ request.user }}</b> <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="{% url 'cron' %}"><span class="fa fa-tasks"></span> Update feeds</a>
                             <li><a href="{% url 'account_logout' %}"><span class="fa fa-sign-out"></span> Log out</a>
                             </li>
                         </ul>
