--- a/templates/aggregator/add_source.html
+++ b/templates/aggregator/add_source.html
@@ -8,7 +8,7 @@
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-primary btn-block"><span class="fa fa-paper-plane-o"></span> Add</button>
+                <button class="btn btn-primary btn-block" type="submit"><span class="fa fa-paper-plane-o"></span> Add</button>
             </form>
         </div>
     </div>
