--- a/templates/home.html
+++ b/templates/home.html
@@ -7,14 +7,14 @@
 <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="row">
-            <div class="col-sm-6 col-md-8">
+            <div class="col-xs-12 col-md-6">
                 <h2>Try django 1.8</h2>
                 <p>The MVP Lending project is designed to your project started. The goal is to help you launch as soon as possible with the least amount of investment using time or money. Join Us today.</p>
                 <p>
                   <a class="btn btn-lg btn-primary" href="#" role="button">Join Us &raquo;</a>
                 </p>
             </div>
-            <div class="col-sm-6 col-md-4" style="background:#000;height:300px;"></div>
+            <iframe class="col-xs-12 col-md-6" height="315" src="https://www.youtube.com/embed/7BQooKGbsdo" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 {% endblock %}
