35/42 refactor urls, add fonticons, clear pycharm trash

--- a/templates/head_css.html
+++ b/templates/head_css.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 <!-- Loading Bootstrap -->
+<link rel="stylesheet" href="{% static 'css/vendor/font-awesome/css/font-awesome.min.css' %}">
 <link href="{% static 'css/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
 <!-- Loading Flat UI -->
