--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,10 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <h2>Try django 1.8</h2>
+                <h2>
+                    <i class="fa fa-github fa-fw"></i>
+                    Try django 1.8
+                </h2>
                 <p>The MVP Lending project is designed to your project started. The goal is to help you launch as soon as possible with the least amount of investment using time or money. Join Us today.</p>
                 <p>
                   <a class="btn btn-lg btn-primary" href="#" role="button">Join Us &raquo;</a>
@@ -29,8 +32,26 @@
             <input class="btn btn-primary" type="submit" value="Sign Up" />
         </form>
     </div>
-    <div class="col-md-3">Buitl with Django & Bootstrap</div>
-    <div class="col-md-3">Created for Starters of all kinds</div>
-    <div class="col-md-3">Always Open Source</div>
+    <div class="col-md-3">
+        <p class="lead text-center">
+            Buitl with Django & Bootstrap
+            <i class="fa fa-chrome fa-spin fa-5x fa-fw"></i>
+        </p>
+    </div>
+    <div class="col-md-3">
+        <p class="lead text-center">
+            Created for Starters of all kinds
+            <i class="fa fa-firefox fa-spin fa-5x fa-fw"></i>
+        </p>
+    </div>
+    <div class="col-md-3">
+        <p class="lead text-center">
+            Always Open Source
+            <span class="fa-stack fa-4x">
+                <i class="fa fa-internet-explorer fa-stack-1x"></i>
+                <i class="fa fa-ban fa-stack-2x text-danger"></i>
+            </span>
+        </p>
+    </div>
 </div>
 {% endblock %}
