--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
                   <a class="btn btn-lg btn-primary" href="#" role="button">Join Us &raquo;</a>
                 </p>
             </div>
-            <iframe class="col-xs-12 col-md-6" height="315" src="https://www.youtube.com/embed/7BQooKGbsdo" frameborder="0" allowfullscreen></iframe>
+            <iframe class="col-xs-12 col-md-6" height="315" src="https://www.youtube.com/embed/GJy2gbEvb44" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 {% endblock %}
