--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load tags %}
 <!-- Static navbar -->
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container">
@@ -13,8 +14,8 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="{% url 'contact' %}">Contact</a></li>
+        <li class="{% active request.path '/about' %}"><a href="{% url 'about' %}">About</a></li>
+        <li class="{% active request.path '/contact' %}"><a href="{% url 'contact' %}">Contact</a></li>
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
