--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -4,3 +4,8 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="{% static 'js/vendor/video.js' %}"></script>
 <script src="{% static 'js/flat-ui.min.js' %}"></script>
+<script>
+    $(document).ready(function () {
+        $('.alert-success').delay(5000).fadeOut(1000);
+    });
+</script>
