--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,22 @@
 
     {% include 'navbar.html' %}
 
+    {% if messages %}
+        <div class="container">
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="alert alert-success alert-dismissable" role="alert">
+                    <button type="button" class="close" data-dismiss="alert">
+                        <span aria-hidden="true">&times;</span>
+                        <span class="sr-only">Close</span>
+                    </button>
+                    {% for message in messages %}
+                        {{ message }} <br />
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
     <div class="container">
 
         {% block jambotron %}
