--- a/templates/forms.html
+++ b/templates/forms.html
@@ -5,17 +5,7 @@
 {% block head_title %}Contact us | {{ block.super }}{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-            {% if title %}
-            <h1 class="{% if title_center %}text-center{% endif %}">{{ title }}</h1>
-            {% endif %}
 
-            <form method="POST">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <input class="btn btn-primary" type="submit" value="Submit" />
-            </form>
-        </div>
-    </div>
+    {% include 'single_form.html' with form=form %}
+
 {% endblock %}
